# fec-raptorq

./: .gitmodules  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OLD_PLANS.txt  README.md  TODO.txt  package-lock.json  package.json
docs/: raptorq_raw.md  raptorq_suppa.md
internal/: .gitignore  CLI.md  Cargo.toml  Dockerfile  README.md  build.sh  decoder.rs.patch  test.sh
internal/dev/: build.bat  build.sh
internal/src/: main.rs
src/: Uint1Array.js  Uint1Array.test.js  get_binary_path.js  index.js  index.test.js
src/raptorq_raw/: decode.js  encode.js  exact_options.js  index.d.ts  index.js  oti_decode.js  oti_encode.js
src/raptorq_suppa/: calculate_ecc.js  decode.js  encode.js  exact_strategy.js  index.d.ts  index.js  oti_decode.js  oti_encode.js  packet_header_decode.js  packet_header_encode.js  packet_miniheader_decode.js  packet_miniheader_encode.js
src/uoe/: map.test.js
