[package]
name = "raptorq-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raptorq"
path = "src/main.rs"

[features]
# Enable verbose logging to stderr (disabled by default)
verbose-logging = []

[dependencies]
raptorq = { path = "./raptorq", features = ["std", "serde_support"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
